Add orangepi-3b support

--- a/.github/workflows/build-fnnas-image.yml
+++ b/.github/workflows/build-fnnas-image.yml
@@ -85,6 +85,7 @@ on:
           - orangepi-5-plus
           - orangepi-5b
           - orangepi-zero3
+          - orangepi-3b
           - panther-x2
           - photonicat
           - r66s
